cmake_minimum_required(VERSION 3.13)
project(Clearn C)

set(CMAKE_C_STANDARD 99)

add_executable(ForWithIf src/ForWithIf.c)
add_executable(Hello src/Hello.c)
add_executable(Pointer src/Pointer.c)
add_executable(DoublePointer src/DoublePointer.c)
add_executable(Snail src/Snail.c)
add_executable(Structure src/Structure.c)
add_executable(LinkedList src/LinkedList.c)
add_executable(BineryTree src/BineryTree.c)
add_executable(TowerOfHanoi src/TowerOfHanoi.c)
add_executable(QueueAndStack src/QueueAndStack.c)